package org.switch2022.project.controller;

import org.switch2022.project.model.Profile;

import java.awt.image.BufferedImage;

public class AccountDTO {
    public String name;
    public String email;
    public long phoneNumber;
    public BufferedImage photo;
    public boolean status;
    public Profile profile;
}
