@startuml
skinparam sequenceMessageAlign center
title TO LIST ALL ACCOUNTS
legend top
US004 - As Administrator, I want to get a list of all user accounts and their status.
end legend


class ListAccountController {
-accountService
-accountMapper
+listAllAccounts()
+accountToDtoList(accounts)
}

class AccountListService{
-accountRepository
+listAllAccounts()
}

class AccountRepository{
+getAccounts()
}

interface IAccountRepository{
+getAccounts()
}

class AccountMapper {
+accountToDto(account)
+accountsToDtoList(accounts)
}

class AccountDto{
+name
+email
+status
}

class "Account" <<root>>{
-name
-email
-phoneNumber
-accountStatus
-photo
+getName()
+getEmail()
+getAccountStatus()
}

ListAccountController"1" <.. "1"AccountListService : is injected
AccountRepository -|> IAccountRepository : implements
IAccountRepository ..> AccountListService : is injected
AccountListService "1"--> "1"AccountMapper : has
AccountMapper --> AccountDto : creates
AccountRepository "1"->"*" Account: has
AccountMapper ..> Account : knows

@enduml
